--- a/YouthCommunity/build.gradle
+++ b/YouthCommunity/build.gradle
@@ -4,11 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.29.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +25,13 @@ allprojects {
         maven { url "https://jitpack.io" } /*사진줌인아웃*/
         maven {
             url "https://maven.google.com"
+        }
+
+        maven {
+            url 'https://s3.amazonaws.com/fabric-artifacts-private/internal-snapshots'
+        }
+        maven {
+            url 'https://maven.fabric.io/public'
         }
     }
 }
